syntax = "proto3";

enum ProtoPersistError {
  SAVE_ERROR = 0;
  LOAD_ERROR = 1;
}